selfhost/test/typechecker/enumdecl/error_invalid_tostring_signature.out
Error at %FILE_NAME%:2:8
Invalid signature for method 'toString'
  |    func toString(self) {}
            ^
